--- a/development/backend/auth.mdx
+++ b/development/backend/auth.mdx
@@ -13,7 +13,7 @@ The backend authentication system is built on several key components:
 - **[Lucia v3](https://lucia-auth.com/)** - Core session management and authentication library
 - **[Argon2](https://github.com/napi-rs/node-rs)** - Industry-standard password hashing
 - **[Arctic](https://arctic.js.org/)** - OAuth 2.0 client library for provider integration
-- **Database-backed sessions** - SQLite/Turso storage for session persistence
+- **Database-backed sessions** - PostgreSQL storage for session persistence
 - **Dual authentication** - Support for both cookie sessions and OAuth2 Bearer tokens
 
 ## Authentication Flow Types
