--- a/development/backend/user-preferences-system.mdx
+++ b/development/backend/user-preferences-system.mdx
@@ -268,7 +268,7 @@ If you need to rename or remove preferences:
 
 - [API Security](/development/backend/api/security) - Security patterns and authorization
 - [Role Management](/development/backend/roles) - Permission system details
-- [Database Schema](https://github.com/deploystackio/deploystack/blob/main/services/backend/src/db/schema.sqlite.ts) - Complete database schema reference
+- [Database Schema](https://github.com/deploystackio/deploystack/blob/main/services/backend/src/db/schema.ts) - Complete database schema reference
 
 ## Key Benefits
 
