--- a/development/index.mdx
+++ b/development/index.mdx
@@ -123,7 +123,7 @@ deploystack/
 ### Backend Stack
 - **Fastify** for high-performance cloud control plane
 - **TypeScript** with full type safety
-- **Drizzle ORM** supporting SQLite and PostgreSQL
+- **Drizzle ORM** with PostgreSQL
 - **Plugin System** with isolated routes (`/api/plugin/<id>/`)
 - **Role-Based Access Control** with session management
 
