--- a/development/satellite/registration.mdx
+++ b/development/satellite/registration.mdx
@@ -253,7 +253,7 @@ The Backend maintains satellite state across five database tables:
 - **satelliteUsageLogs**: Usage analytics and audit trails
 - **satelliteHeartbeats**: Health monitoring and status updates
 
-See `services/backend/src/db/schema.sqlite.ts` for complete schema definitions.
+See `services/backend/src/db/schema.ts` for complete schema definitions.
 
 ### Registration Database Operations
 
