--- a/general/local-setup.mdx
+++ b/general/local-setup.mdx
@@ -18,7 +18,7 @@ This guide is for contributors and developers who want to run DeployStack locall
 # - Git: Version control system
 # - Node.js v18+: JavaScript runtime (v18 or higher required)
 # - npm v8+: Package manager (comes with Node.js)
-# - Docker: For running databases (optional but recommended)
+# - Docker: For running PostgreSQL database
 
 # Verify Installation
 git --version
@@ -110,6 +110,14 @@ DEPLOYSTACK_ENCRYPTION_SECRET=your-32-character-secret-here
 # Frontend URL (for CORS and redirects)
 DEPLOYSTACK_FRONTEND_URL=http://localhost:5173
 
+# PostgreSQL Configuration (matches postgres:local defaults)
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=deploystack
+POSTGRES_USER=deploystack
+POSTGRES_PASSWORD=deploystack
+POSTGRES_SSL=false
+
 # Development settings
 NODE_ENV=development
 PORT=3000
@@ -155,34 +163,38 @@ node -e "console.log(require('crypto').randomBytes(16).toString('hex'))"
 ```
 </CodeGroup>
 
-## Step 4: Set Up Database (Optional)
+## Step 4: Start PostgreSQL Database
 
-DeployStack uses SQLite by default for development, but you can optionally set up PostgreSQL:
+DeployStack uses PostgreSQL as its database backend. For local development, we provide a convenient script to start PostgreSQL in Docker:
 
-<CodeGroup>
-```text SQLite (Default)
-No additional setup required. DeployStack will create a SQLite database automatically in services/backend/persistent_data/.
-
-The database file will be created on first run:
-services/backend/persistent_data/database/deploystack.db
+```bash
+# Start PostgreSQL 18 in Docker
+npm run postgres:local
 ```
 
-```bash PostgreSQL (Optional)
-# If you prefer PostgreSQL for development:
+This command will:
+- Pull PostgreSQL 18 Docker image
+- Create a local PostgreSQL container with default credentials:
+  - **Host**: localhost
+  - **Port**: 5432
+  - **Database**: deploystack
+  - **User**: deploystack
+  - **Password**: deploystack
+- Create a persistent volume for database data
 
-# Start PostgreSQL with Docker
-docker run -d \
-  --name deploystack-postgres \
-  -e POSTGRES_DB=deploystack \
-  -e POSTGRES_USER=deploystack \
-  -e POSTGRES_PASSWORD=deploystack \
-  -p 5432:5432 \
-  postgres:16
+<Info>
+  The PostgreSQL container will persist data between restarts. To reset the database, remove the `postgres_data` volume: `docker volume rm postgres_data`
+</Info>
 
-# Update your services/backend/.env:
-DATABASE_URL=postgresql://deploystack:deploystack@localhost:5432/deploystack
+### Verify PostgreSQL is Running
+
+```bash
+# Check if PostgreSQL container is running
+docker ps | grep postgres-local
+
+# Test connection
+psql -h localhost -U deploystack -d deploystack -c "SELECT version();"
 ```
-</CodeGroup>
 
 ## Step 5: Running the Development Servers
 
@@ -244,13 +256,16 @@ Once both services are running:
     curl http://localhost:5173         # Frontend dev server
     ```
   </Step>
-  
+
   <Step title="Access the Application">
     Open [http://localhost:5173](http://localhost:5173) in your browser. You should see the DeployStack interface.
   </Step>
-  
-  <Step title="Create First User">
-    Follow the on-screen setup wizard to create your first admin user and configure basic settings.
+
+  <Step title="Complete Setup Wizard">
+    Follow the on-screen setup wizard to:
+    - Configure PostgreSQL database connection
+    - Create your first admin user
+    - Set up basic platform settings
   </Step>
 </Steps>
 
@@ -268,6 +283,9 @@ Both services support hot reloading:
 From the project root:
 
 ```bash
+# Database
+npm run postgres:local        # Start PostgreSQL in Docker
+
 # Development
 npm run dev:frontend          # Start frontend dev server
 npm run dev:backend           # Start backend dev server
@@ -280,6 +298,9 @@ npm run build:backend         # Build backend TypeScript
 npm run lint:frontend         # Lint frontend code
 npm run lint:backend          # Lint backend code
 npm run lint:md               # Lint markdown files
+
+# Database Migrations
+npm run db:generate           # Generate new migrations
 
 # Testing
 npm run test:backend:unit     # Run backend unit tests
@@ -304,7 +325,7 @@ deploystack/
 │   ├── backend/           # Fastify backend API
 │   │   ├── src/          # Source code
 │   │   ├── tests/        # Test files
-│   │   ├── persistent_data/ # SQLite database and uploads
+│   │   ├── persistent_data/ # Database and application data
 │   │   ├── package.json  # Backend dependencies
 │   │   └── tsconfig.json # TypeScript configuration
 │   └── shared/           # Shared utilities and types
@@ -323,6 +344,7 @@ deploystack/
 # Check what's using the port
 lsof -i :3000  # Backend port
 lsof -i :5173  # Frontend port
+lsof -i :5432  # PostgreSQL port
 
 # Kill process using the port
 kill -9 <PID>
@@ -355,17 +377,24 @@ Run your terminal as Administrator or ensure you have write permissions to the p
 ```
 </CodeGroup>
 
-#### Database Connection Issues
+#### PostgreSQL Connection Issues
 
 ```bash
-# Check if database directory exists
-ls -la services/backend/persistent_data/
+# Check if PostgreSQL container is running
+docker ps | grep postgres-local
 
-# Create directory if missing
-mkdir -p services/backend/persistent_data/database
+# View PostgreSQL logs
+docker logs postgres-local
 
-# Check database file permissions
-ls -la services/backend/persistent_data/database/
+# Restart PostgreSQL
+docker stop postgres-local
+npm run postgres:local
+
+# Reset PostgreSQL (removes all data)
+docker stop postgres-local
+docker rm postgres-local
+docker volume rm postgres_data
+npm run postgres:local
 ```
 
 #### Environment Variable Issues
@@ -377,6 +406,9 @@ ls -la services/frontend/.env
 
 # Check if encryption secret is set
 grep DEPLOYSTACK_ENCRYPTION_SECRET services/backend/.env
+
+# Check PostgreSQL configuration
+grep POSTGRES services/backend/.env
 ```
 
 ### Getting Help
