--- a/development/satellite/backend-communication.mdx
+++ b/development/satellite/backend-communication.mdx
@@ -278,7 +278,7 @@ The Backend maintains satellite state in five tables:
 - `satelliteUsageLogs` - Usage analytics and audit
 - `satelliteHeartbeats` - Health monitoring data
 
-See `services/backend/src/db/schema.sqlite.ts` for complete schema definitions.
+See `services/backend/src/db/schema.ts` for complete schema definitions.
 
 ## Security Implementation
 
